# lefosh

./: .gitignore  CMakeLists.txt  README.md
src/app/: lefosh.c  lefosh.cpp  lefosh.h  lefosh.hpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
